--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,8 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {}
+  "name": "Streamlit + PostgreSQL",
+  "dockerComposeFile": "../docker-compose.yml",
+  "service": "streamlit",
+  "workspaceFolder": "/app",
+  "forwardPorts": [8501, 5432],
+  "postCreateCommand": "pip install -r requirements.txt"
 }
